[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loha-port-forwarder"
version = "0.3.4"
description = "Python implementation of LOHA Port Forwarder"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
loha = "loha.cli:main"
loha-loader = "loha.loader:main"
loha-install = "loha.install:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
